--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ credential.json
 /src/googleVisionAnnoLab/annotateResult
 /src/googleVisionAnnoLab/expectReceipt
 /src/googleVisionAnnoLab/fullTextAnnotationPlusStudy
+/src/receiptObj
