--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,13 @@
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
-    "noImplicitAny": false,
+    "noImplicitAny": false, //
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     
     "resolveJsonModule": true,
-    "esModuleInterop":true
+    "esModuleInterop":true,
+    "strict": true
   }
 }
