--- a/.env_lab
+++ b/.env_lab
@@ -3,7 +3,7 @@ PORT=5000
 SENDGRID_API_KEY=""
 
 MONGO_database=
-MONGO_URL=mongodb+srv://__ID__:__PW__@cluster0.ofdga.mongodb.net/
-MONGO_Query=?retryWrites=true&w=majority
+MONGO_URL=
+MONGO_Query=
 
 Temporary_PASSWORD=__random__
