--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bson": "^4.2.0",
     "@types/express": "^4.17.13",
     "@types/heic-convert": "^1.2.0",
     "@types/jest": "28.1.4",
@@ -60,6 +61,7 @@
     "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "bson": "^4.7.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
